Fixed bug #3314514: rmp driver using canlib
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9057 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/mixed/rmp/CMakeLists.txt
+++ b/server/drivers/mixed/rmp/CMakeLists.txt
@@ -1,15 +1,15 @@
 PLAYERDRIVER_OPTION (segwayrmp build_segwayrmp OFF "Disabled by default")
 SET (CANLIB_DIR "" CACHE STRING "Directory containing the CANLIB headers and libraries")
 MARK_AS_ADVANCED (CANLIB_DIR)
-IF (NOT "${CANLIB_DIR}" STREQUAL "")
+IF ("${CANLIB_DIR}" STREQUAL "")
     SET (segwayrmpReqHeader "canlib.h")
     SET (segwayrmpExtraFlags "")
     SET (segwayrmpExtraLibs "-lcanlib")
-ELSE (NOT "${CANLIB_DIR}" STREQUAL "")
+ELSE ("${CANLIB_DIR}" STREQUAL "")
     SET (segwayrmpReqHeader "${CANLIB_DIR}/include/canlib.h")
     SET (segwayrmpExtraFlags "-I${CANLIB_DIR}/include")
     SET (segwayrmpExtraLibs "-L${CANLIB_DIR}/lib -lcanlib")
-ENDIF (NOT "${CANLIB_DIR}" STREQUAL "")
+ENDIF ("${CANLIB_DIR}" STREQUAL "")
 PLAYERDRIVER_REQUIRE_HEADER (segwayrmp build_segwayrmp ${segwayrmpReqHeader})
 PLAYERDRIVER_ADD_DRIVER (segwayrmp build_segwayrmp
     LINKFLAGS ${segwayrmpExtraLibs} CFLAGS ${segwayrmpExtraFlags}
