Updated playersd to player 3.1, compiles again
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9059 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/libplayersd/CMakeLists.txt
+++ b/libplayersd/CMakeLists.txt
@@ -1,17 +1,18 @@
 IF (HAVE_DNS_SD)
-    OPTION (HAVE_PLAYERSD "Build libplayersd" OFF)
+    OPTION (BUILD_PLAYERSD "Build libplayersd" OFF)
 ENDIF (HAVE_DNS_SD)
 
-IF (HAVE_PLAYERSD)
+IF (BUILD_PLAYERSD)
+    SET(HAVE_PLAYERSD true)
     SET (playersdSrcs playersd_mdns.c playersd.c)
 
     PLAYER_ADD_LIBRARY (playersd ${playersdSrcs})
     TARGET_LINK_LIBRARIES (playersd playerinterface playercommon)
-    PLAYER_ADD_LINK_LIB (dns_sd)
+    TARGET_LINK_LIBRARIES(playersd dns_sd)
     IF (PTHREAD_LIB)
         SET (PTHREAD_LIB_FLAG "-l${PTHREAD_LIB}")
     ENDIF (PTHREAD_LIB)
     PLAYER_MAKE_PKGCONFIG ("playersd" "Player service discovery library - part of the Player Project" "playerinterface playercommon" "" "" "-ldns_sd ${PTHREAD_LIB_FLAG}")
 
     PLAYER_INSTALL_HEADERS (playersd playersd.h)
-ENDIF (HAVE_PLAYERSD)
+ENDIF (BUILD_PLAYERSD)
