--- a/utils/pmap/CMakeLists.txt
+++ b/utils/pmap/CMakeLists.txt
@@ -52,6 +52,9 @@ IF (BUILD_UTILS_PMAP)
 
             PLAYER_ADD_LIBRARY (lodo ${lodoSrcs})
             TARGET_LINK_LIBRARIES (lodo playercore)
+            IF(HAVE_PLAYERSD)
+                TARGET_LINK_LIBRARIES(lodo playersd)
+            ENDIF(HAVE_PLAYERSD)
             IF (GLUT_FOUND)
                 TARGET_LINK_LIBRARIES (lodo ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
             ENDIF (GLUT_FOUND)
