Added capability requests to roomba and create drivers. Added position2d odometry set/reset to roomba and create drivers. Moved search for canlib to searchforstuff.cmake Separated CAN functionality in segwayrmp driver, driver can now build usb-only Added capability requests to the segwayrmp driver
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9066 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/mixed/rmp/CMakeLists.txt
+++ b/server/drivers/mixed/rmp/CMakeLists.txt
@@ -1,16 +1,11 @@
-PLAYERDRIVER_OPTION (segwayrmp build_segwayrmp OFF "Disabled by default")
+PLAYERDRIVER_OPTION (segwayrmp build_segwayrmp ON "Build Segway RMP driver")
 SET (CANLIB_DIR "" CACHE STRING "Directory containing the CANLIB headers and libraries")
-MARK_AS_ADVANCED (CANLIB_DIR)
-IF ("${CANLIB_DIR}" STREQUAL "")
-    SET (segwayrmpReqHeader "canlib.h")
-    SET (segwayrmpExtraFlags "")
-    SET (segwayrmpExtraLibs "-lcanlib")
-ELSE ("${CANLIB_DIR}" STREQUAL "")
-    SET (segwayrmpReqHeader "${CANLIB_DIR}/include/canlib.h")
-    SET (segwayrmpExtraFlags "-I${CANLIB_DIR}/include")
-    SET (segwayrmpExtraLibs "-L${CANLIB_DIR}/lib -lcanlib")
-ENDIF ("${CANLIB_DIR}" STREQUAL "")
-PLAYERDRIVER_REQUIRE_HEADER (segwayrmp build_segwayrmp ${segwayrmpReqHeader})
+
+IF (${HAVE_CANLIB})
 PLAYERDRIVER_ADD_DRIVER (segwayrmp build_segwayrmp
-    LINKFLAGS ${segwayrmpExtraLibs} CFLAGS ${segwayrmpExtraFlags}
+    LINKFLAGS ${CANLIB_LINK_FLAGS} CFLAGS ${CANLIB_INCLUDE_FLAGS}
     SOURCES segwayrmp.cc canio_kvaser.cc usb_packet.cc)
+ELSE (${HAVE_CANLIB})
+PLAYERDRIVER_ADD_DRIVER (segwayrmp build_segwayrmp
+    SOURCES segwayrmp.cc usb_packet.cc)
+ENDIF (${HAVE_CANLIB})
