--- a/config.h.in
+++ b/config.h.in
@@ -17,4 +17,5 @@
 #cmakedefine WORDS_BIGENDIAN 1
 #cmakedefine HAVE_SETDLLDIRECTORY 1
 #cmakedefine HAVE_PHIDGET_2_1_7 1
+#cmakedefine HAVE_CANLIB 1
 
