--- a/config.h.in
+++ b/config.h.in
@@ -2,6 +2,7 @@
 
 /* Install prefix */
 #define PLAYER_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}"
+#define PLAYER_LIBRARY_INSTALL_DIR "${PLAYER_LIBRARY_INSTALL_DIR}"
 
 /* enable TCP_NODELAY */
 #cmakedefine ENABLE_TCP_NODELAY 1
