Fixed bug where playerc python bindings try to build when python development libraries are not available.  Now checks for swig AND the PythonLibs before trying to enable python bindings
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9077 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/client_libs/libplayerc++/bindings/python/CMakeLists.txt
+++ b/client_libs/libplayerc++/bindings/python/CMakeLists.txt
@@ -6,13 +6,13 @@ IF(BUILD_PLAYERCC)
 
         IF (BUILD_PYTHONCPP_BINDINGS)
             FIND_PACKAGE (SWIG)
-            IF (SWIG_FOUND)
+            FIND_PACKAGE (PythonLibs)
+            IF (SWIG_FOUND AND PYTHONLIBS_FOUND)
                 MESSAGE (STATUS "Python bindings for C++ client library will be built")
 
                 #INCLUDE (${SWIG_USE_FILE})
                 INCLUDE (${PLAYER_CMAKE_DIR}/internal/UseSwig_Player.cmake)
 
-                FIND_PACKAGE (PythonLibs)
                 INCLUDE_DIRECTORIES (${PYTHON_INCLUDE_PATH})
                 INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR}/client_libs)
                 INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/client_libs)
@@ -42,14 +42,16 @@ IF(BUILD_PLAYERCC)
                 INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/playercpp.py
                         ${CMAKE_CURRENT_BINARY_DIR}/_playercpp.so
                         DESTINATION ${PYTHON_BINDINGS_INSTALL_DIR})
-            ELSE (SWIG_FOUND)
+            ELSEIF (PYTHONLIBS_FOUND)
                 MESSAGE (STATUS "Python bindings for C++ client library will not be built - could not find Swig")
-            ENDIF (SWIG_FOUND)
+            ELSEIF (SWIG_FOUND)
+                MESSAGE (STATUS "Python bindings for C++ client library will not be built - could not find Python development libraries")
+            ENDIF (SWIG_FOUND AND PYTHONLIBS_FOUND)
         ELSE (BUILD_PYTHONCPP_BINDINGS)
             MESSAGE (STATUS "Python bindings for C++ client library will not be built - disabled by user")
         ENDIF (BUILD_PYTHONCPP_BINDINGS)
     ELSE (PYTHONINTERP_FOUND)
-        MESSAGE (STATUS "Python bindings for C++ client library will not be built - could not find Python")
+        MESSAGE (STATUS "Python bindings for C++ client library will not be built - could not find Python interpreter")
     ENDIF (PYTHONINTERP_FOUND)
 ELSE (BUILD_PLAYERCC)
   MESSAGE (STATUS "Python bindings for C++ client library will not be built - playerc++ client library disabled")
