--- a/client_libs/libplayerc/bindings/python/CMakeLists.txt
+++ b/client_libs/libplayerc/bindings/python/CMakeLists.txt
@@ -4,13 +4,13 @@ IF (PYTHONINTERP_FOUND)
 
     IF (BUILD_PYTHONC_BINDINGS)
         FIND_PACKAGE (SWIG)
-        IF (SWIG_FOUND)
+        FIND_PACKAGE (PythonLibs)
+        IF (SWIG_FOUND AND PYTHONLIBS_FOUND)
             MESSAGE (STATUS "Python bindings for C client library will be built")
 
             #INCLUDE (${SWIG_USE_FILE})
             INCLUDE (${PLAYER_CMAKE_DIR}/internal/UseSwig_Player.cmake)
 
-            FIND_PACKAGE (PythonLibs)
             INCLUDE_DIRECTORIES (${PYTHON_INCLUDE_PATH})
             INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR})
             INCLUDE_DIRECTORIES (${PROJECT_BINARY_DIR})
@@ -61,13 +61,15 @@ IF (PYTHONINTERP_FOUND)
 
             INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/playerc.py ${CMAKE_CURRENT_BINARY_DIR}/_playerc.so
                 DESTINATION ${PYTHON_BINDINGS_INSTALL_DIR})
-        ELSE (SWIG_FOUND)
+        ELSEIF ( PYTHONLIBS_FOUND )
             MESSAGE (STATUS "Python bindings for C client library will not be built - could not find Swig")
-        ENDIF (SWIG_FOUND)
+        ELSEIF (SWIG_FOUND)
+            MESSAGE (STATUS "Python bindings for C client library will not be build - could not find Python development libraries")
+        ENDIF (SWIG_FOUND AND PYTHONLIBS_FOUND)
     ELSE (BUILD_PYTHONC_BINDINGS)
         MESSAGE (STATUS "Python bindings for C client library will not be built - disabled by user")
     ENDIF (BUILD_PYTHONC_BINDINGS)
 ELSE (PYTHONINTERP_FOUND)
-    MESSAGE (STATUS "Python bindings for C client library will not be built - could not find Python")
+    MESSAGE (STATUS "Python bindings for C client library will not be built - could not find Python interpreter")
 ENDIF (PYTHONINTERP_FOUND)
 
