--- a/server/drivers/imu/CMakeLists.txt
+++ b/server/drivers/imu/CMakeLists.txt
@@ -5,3 +5,5 @@ PLAYERDRIVER_REQUIRE_HEADER (nimu build_nimu usb.h)
 PLAYERDRIVER_REJECT_OS (nimu build_nimu PLAYER_OS_WIN)
 PLAYERDRIVER_ADD_DRIVER (nimu build_nimu LINKFLAGS "-lusb" SOURCES nimu.cpp nimuplayer.cpp)
 
+PLAYERDRIVER_OPTION (razorimu build_razorimu ON)
+PLAYERDRIVER_ADD_DRIVER (razorimu build_razorimu SOURCES RazorIMU.cc)
