Reject razorimu on windows, it requires termios.h
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9080 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/imu/CMakeLists.txt
+++ b/server/drivers/imu/CMakeLists.txt
@@ -5,5 +5,7 @@ PLAYERDRIVER_REQUIRE_HEADER (nimu build_nimu usb.h)
 PLAYERDRIVER_REJECT_OS (nimu build_nimu PLAYER_OS_WIN)
 PLAYERDRIVER_ADD_DRIVER (nimu build_nimu LINKFLAGS "-lusb" SOURCES nimu.cpp nimuplayer.cpp)
 
+# razorimu requires termios.h, reject Windows
 PLAYERDRIVER_OPTION (razorimu build_razorimu ON)
+PLAYERDRIVER_REJECT_OS (razorimu build_razorimu PLAYER_OS_WIN)
 PLAYERDRIVER_ADD_DRIVER (razorimu build_razorimu SOURCES RazorIMU.cc)
