Applied patch #3496741: libv4l2 webcam driver for Player
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9090 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/server/drivers/camera/CMakeLists.txt
+++ b/server/drivers/camera/CMakeLists.txt
@@ -10,6 +10,7 @@ ADD_SUBDIRECTORY (imageseq)
 ADD_SUBDIRECTORY (imgcmp)
 ADD_SUBDIRECTORY (imgsave)
 ADD_SUBDIRECTORY (kinect)
+ADD_SUBDIRECTORY (libv4l2)
 ADD_SUBDIRECTORY (powershot)
 ADD_SUBDIRECTORY (sphere)
 ADD_SUBDIRECTORY (uvc)
