Applied patch #3494845: Generic XBow WSN nodes driver & Cooperating Object Interface
git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9095 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/client_libs/libplayerc++/CMakeLists.txt
+++ b/client_libs/libplayerc++/CMakeLists.txt
@@ -176,6 +176,7 @@ IF (BUILD_PLAYERCC)
                         blobfinderproxy.cc
                         bumperproxy.cc
                         cameraproxy.cc
+                        coopobjectproxy.cc
                         dioproxy.cc
                         fiducialproxy.cc
                         gpsproxy.cc
