Initial MinGW support
This commit adds initial support to Player for building with the MinGW compiler
suite on Windows or other platforms (via cross-compilers).  The support is 
initially limited to the core Player libraries, console-based utilities, and
drivers that don't require third-party dependencies.  Further support (gtk, 
boost, etc) is ongoing.

Currently this support is being tested using the MinGW compiler suite on
Windows 7, and using the MinGW 32 and 64 cross-compilers on Fedora 18, with
binaries run via WINE.


git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9116 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/client_libs/libplayerc/CMakeLists.txt
+++ b/client_libs/libplayerc/CMakeLists.txt
@@ -81,7 +81,7 @@ ELSEIF (PLAYER_OS_SOLARIS)
     PLAYERC_ADD_LINK_LIB (socket nsl rt)
 ENDIF (PLAYER_OS_QNX)
 IF (PLAYER_OS_WIN)
-    PLAYERC_ADD_LINK_LIB (Ws2_32)
+    PLAYERC_ADD_LINK_LIB (ws2_32)
 ENDIF (PLAYER_OS_WIN)
 
 LINK_DIRECTORIES (${PLAYERC_EXTRA_LINK_DIRS})
