--- a/libplayerinterface/CMakeLists.txt
+++ b/libplayerinterface/CMakeLists.txt
@@ -102,7 +102,8 @@ INCLUDE_DIRECTORIES (${CMAKE_CURRENT_BINARY_DIR})
 PLAYER_ADD_LIBRARY (playerinterface ${playerinterfaceSrcs})
 TARGET_LINK_LIBRARIES (playerinterface playercommon)
 IF (PLAYER_OS_WIN)
-    TARGET_LINK_LIBRARIES (playerinterface Ws2_32)
+    ADD_DEFINITIONS(-Dplayerxdr_EXPORTS)
+    TARGET_LINK_LIBRARIES (playerinterface ws2_32)
 ENDIF (PLAYER_OS_WIN)
 SET_SOURCE_FILES_PROPERTIES (${playerxdr_h} ${playerxdr_c} PROPERTIES GENERATED TRUE)
 IF (PLAYER_OS_QNX)
