--- a/libplayertcp/CMakeLists.txt
+++ b/libplayertcp/CMakeLists.txt
@@ -41,7 +41,7 @@ IF (INCLUDE_TCP)
     TARGET_LINK_LIBRARIES (playertcp playercore playercommon playerinterface
                            ${playerreplaceLib} ${SOCKET_LIBS})
     IF (PLAYER_OS_WIN)
-        TARGET_LINK_LIBRARIES (playertcp Ws2_32)
+        TARGET_LINK_LIBRARIES (playertcp ws2_32)
     ENDIF (PLAYER_OS_WIN)
     IF (SOCKET_LIBS)
         PLAYERCORE_ADD_INT_LINK_LIB (${SOCKET_LIBS})
@@ -75,7 +75,7 @@ IF (INCLUDE_UDP)
     TARGET_LINK_LIBRARIES (playerudp playercore playercommon playerinterface
                            ${playerreplaceLib} ${SOCKET_LIBS})
     IF (PLAYER_OS_WIN)
-        TARGET_LINK_LIBRARIES (playerudp Ws2_32)
+        TARGET_LINK_LIBRARIES (playerudp ws2_32)
     ENDIF (PLAYER_OS_WIN)
     IF (SOCKET_LIBS)
         PLAYERCORE_ADD_INT_LINK_LIB (${SOCKET_LIBS})
