--- a/replace/CMakeLists.txt
+++ b/replace/CMakeLists.txt
@@ -14,7 +14,7 @@ IF (NOT HAVE_XDR)
                         xdr_mem.c
                         xdr_sizeof.c)
     IF (PLAYER_OS_WIN)
-	SET (ws2_32lib Ws2_32)
+	SET (ws2_32lib ws2_32)
     ENDIF (PLAYER_OS_WIN)
 ENDIF (NOT HAVE_XDR)
 
@@ -57,7 +57,7 @@ ENDIF (NOT HAVE_NANOSLEEP)
 IF (NOT HAVE_POLL)
     SET (replaceSrcs ${replaceSrcs} poll.c)
     IF (PLAYER_OS_WIN)
-	SET (ws2_32lib Ws2_32)
+	SET (ws2_32lib ws2_32)
     ENDIF (PLAYER_OS_WIN)
 ENDIF (NOT HAVE_POLL)
 
@@ -70,7 +70,7 @@ IF (replaceSrcs)
     TARGET_LINK_LIBRARIES (playerreplace playercommon)
     IF (PLAYER_OS_WIN)
 	IF (NOT HAVE_XDR OR NOT HAVE_POLL)	
-	    TARGET_LINK_LIBRARIES (playerreplace Ws2_32)
+	    TARGET_LINK_LIBRARIES (playerreplace ws2_32)
 	ENDIF (NOT HAVE_XDR OR NOT HAVE_POLL)
 	PLAYER_MAKE_PKGCONFIG ("playerreplace" "Player library of replacements for missing platform functionality - part of the Player Project" "playercommon ${ws2_32Lib}" "" "" "")
     ELSE (PLAYER_OS_WIN)
