Add a global plugin directory outside of system library search path
This commit adds support for a system-wide plugin installation directory that
is versioned and not on the system's library installation path.  Currently it
is implemented as a subdirectory of the library installation directory.


git-svn-id: svn://svn.code.sf.net/p/playerstage/svn/code/player/trunk@9121 9fbd2ccc-adb5-4725-87dd-eba157860cdb

--- a/cmake/UsePlayerPlugin.cmake.in
+++ b/cmake/UsePlayerPlugin.cmake.in
@@ -64,6 +64,9 @@ ELSE (NOT PKG_CONFIG_FOUND)
     ENDIF (PLAYERCORE_PKG_LDFLAGS_OTHER)
 ENDIF (NOT PKG_CONFIG_FOUND)
 
+# Set Player's global plugin directory so third parties can drop their plugins
+# there when installing system-wide
+SET(PLAYER_PLUGIN_INSTALL_DIR "@CMAKE_INSTALL_PREFIX@/@PLAYER_PLUGIN_INSTALL_DIR@")
 
 # This is slightly different from the one used by the Player build system itself.
 # It takes a single file instead of a directory. It also expects playerinterfacegen.py
