--- a/config.h.in
+++ b/config.h.in
@@ -3,6 +3,7 @@
 /* Install prefix */
 #define PLAYER_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}"
 #define PLAYER_LIBRARY_INSTALL_DIR "${PLAYER_LIBRARY_INSTALL_DIR}"
+#define PLAYER_PLUGIN_INSTALL_DIR "${PLAYER_PLUGIN_INSTALL_DIR}"
 
 /* enable TCP_NODELAY */
 #cmakedefine ENABLE_TCP_NODELAY 1
